--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -13,5 +15,6 @@
 @layer base{
   body{
     @apply bg-dark-blue;
+    font-family: "Roboto Mono";
   }
 }
